[package]
name = "aoc_2022"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ahash = "0.8"
arrayvec = "0.7.2"
bitvec = "1.0.1"
clap = { version = "4.0.27", features = ["derive"] }
regex = "1.7.0"

[dev-dependencies]
criterion = "0.4"

# The "debug" profile
[profile.release]
panic = "abort"
debug = true
lto = "thin"

# The profile to benchmark with (`cargo run --profile benchmark`)
[profile.benchmark]
inherits = "release"
debug = false
lto = "fat"

# Needed for `cargo criterion`
[profile.bench]
inherits = "release"
debug = false
lto = "fat"

[[bench]]
name = "days_bench"
harness = false
